--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <a href="https://azark-new-project-form.vercel.app/" class="link link-project-form">Project Form</a>
             <a href="https://form.jotform.com/241561757509059" class="link link-change-form">Client/Contact Intake Form</a>
             <a href="https://azark-change-order-form.vercel.app/" class="link link-client-form">Change Order Form</a>
+            <a href="https://airtable.com/apphyPAEq7ZqPB9bI/shrvpFe13fs4ShtXQ" class="link link-service-form">New Service Form</a>
         </div>
     </div>
 </body>
